src/main/default/objects/BotSetting__mdt/BotSetting__mdt.object-meta.xml
<CustomObject>
    <description>Stores bot settings</description>
    <label>Bot Setting</label>
    <pluralLabel>Bot Settings</pluralLabel>
</CustomObject>