src/main/default/objects/BotSetting__mdt/fields/ApiUrl__c.field-meta.xml
<CustomField>
    <fullName>ApiUrl__c</fullName>
    <label>API Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>