src/main/default/objects/BotSetting__mdt/fields/BaseBotHandler__c.field-meta.xml
<CustomField>
    <fullName>BaseBotHandler__c</fullName>
    <description>The name of the Apex class that implements all specific update events for a bot</description>
    <inlineHelpText>The name of the Apex class that implements all specific update events for a bot</inlineHelpText>
    <label>Base Bot Handler</label>
    <length>40</length>
    <type>Text</type>
</CustomField>