src/main/default/objects/BotSetting__mdt/fields/BotCalloutService__c.field-meta.xml
<CustomField>
    <fullName>BotCalloutService__c</fullName>
    <defaultValue>&quot;BotCalloutService&quot;</defaultValue>
    <description>The name of the class that extends BotCalloutService and configures the way callouts are sent to a bot API</description>
    <inlineHelpText>The name of the class that extends BotCalloutService class</inlineHelpText>
    <label>Bot Callout Service</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>