src/main/default/objects/BotSetting__mdt/fields/BotHandlerContext__c.field-meta.xml
<CustomField>
    <fullName>BotHandlerContext__c</fullName>
    <description>The Apex class name that represents the bot context model that will be passed to the handler on the incoming bot updates</description>
    <inlineHelpText>The name of the class that extends BotContext class</inlineHelpText>
    <label>Bot Handler Context</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>