src/main/default/objects/BotSetting__mdt/fields/BotService__c.field-meta.xml
<CustomField>
    <fullName>BotService__c</fullName>
    <description>The name of the Apex class that extends BotService class and represents the main functionality of the bot</description>
    <inlineHelpText>The name of the class that extends BotService class</inlineHelpText>
    <label>Bot Service</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>