src/main/default/objects/BotSetting__mdt/fields/BotUpdateEvent__c.field-meta.xml
<CustomField>
    <fullName>BotUpdateEvent__c</fullName>
    <description>The Apex class name that represents the payload received from the bot webhook</description>
    <inlineHelpText>The name of the class that implements IBotUpdateEvent interface</inlineHelpText>
    <label>Bot Update Event</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>