src/main/default/objects/BotSetting__mdt/fields/BotUpdateEventEntity__c.field-meta.xml
<CustomField>
    <fullName>BotUpdateEventEntity__c</fullName>
    <description>The Apex class name that represents the payload entity received from the bot webhook</description>
    <inlineHelpText>The name of the class that implements IBotUpdateEventEntity interface</inlineHelpText>
    <label>Bot Update Event Entity</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>