src/main/default/objects/BotSetting__mdt/fields/BotUpdateResolver__c.field-meta.xml
<CustomField>
    <fullName>BotUpdateResolver__c</fullName>
    <description>The Apex class name that is responsible for resolving the bot record when webhooks are set</description>
    <inlineHelpText>The name of the class that implements IBotUpdateResolver interface</inlineHelpText>
    <label>Bot Update Resolver</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>