src/main/default/objects/BotSetting__mdt/fields/BotWebhookService__c.field-meta.xml
<CustomField>
    <fullName>BotWebhookService__c</fullName>
    <description>The name of the class that extends BotWebhookService and configures the way webhooks are set and removed for the bot</description>
    <inlineHelpText>The name of the class that extends BotWebhookService class</inlineHelpText>
    <label>Bot Webhook Service</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>