src/main/default/objects/BotSetting__mdt/fields/EventTypesToIgnore__c.field-meta.xml
<CustomField>
    <fullName>EventTypesToIgnore__c</fullName>
    <description>The list of webhook event types separated by semicolons that have to be ignored during update handling</description>
    <inlineHelpText>The list of webhook event types separated by semicolons that have to be ignored during update handling</inlineHelpText>
    <label>Event Types To Ignore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>