src/main/default/objects/BotSetting__mdt/fields/HandleWebhooksInSeparateTransaction__c.field-meta.xml
<CustomField>
    <fullName>HandleWebhooksInSeparateTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the bot update webhooks are handled in a separate transaction or as part of the framework processing</description>
    <inlineHelpText>Determines whether the bot update webhooks are handled in a separate transaction or as part of the framework processing</inlineHelpText>
    <label>Handle Webhooks In Separate Transaction</label>
    <type>Checkbox</type>
</CustomField>