src/main/default/objects/BotSetting__mdt/fields/WebhookBotService__c.field-meta.xml
<CustomField>
    <fullName>WebhookBotService__c</fullName>
    <description>The name of the class that extends WebhookBotService and configures the way webhooks are set and removed for the bot</description>
    <inlineHelpText>The name of the class that extends WebhookBotService class</inlineHelpText>
    <label>Webhook Bot Service</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>